# programming-tips-bot

./: pyproject.toml
extra/: desc.md  prompt.txt
programming_bot/: main.py  options.py  webhook.py
